welcome.lessons.welcome.variables.RunHalf.scala.code
var biscuits:Int = 0;
var caseOrange:Int = 0;
val condition:Int = 2 * biscuits = caseOrange + 1;
avance();
while (condition = false) {
  if (estSurOrange()){
    avance();
    caseOrange = caseOrange + 1;
  } else {
    avance();
  }
  if (estSurBiscuit()) {
    avance();
    biscuits = biscuits + 1
  } else () {
    avance();
  }
}